# stackcut

./: .gitignore  AGENTS.md  BUILD_NOTES.md  Cargo.toml  LICENSE.txt  MAINTAINERS.md  MANIFEST.json  README.md  RELEASE.md  TESTING.md  justfile  stackcut.toml
.github/workflows/: ci.yml
.kiro/specs/stackcut-v01-completion/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
crates/stackcut-artifact/: Cargo.toml
crates/stackcut-artifact/src/: lib.rs
crates/stackcut-cli/: Cargo.toml
crates/stackcut-cli/src/: main.rs
crates/stackcut-core/: Cargo.toml
crates/stackcut-core/src/: lib.rs
crates/stackcut-git/: Cargo.toml
crates/stackcut-git/src/: lib.rs
crates/stackcut-git/tests/: temp_repo_integration.rs
docs/: ARCHITECTURE.md  ROADMAP.md  SCENARIO_ATLAS.md  SCENARIO_INDEX.md
docs/adr/: 0001-diff-to-stack-compiler.md
examples/: override.toml
fixtures/cases/01-feature-plus-refactor/: README.md  expected.plan.json  input.units.json
fixtures/cases/02-generated-follows-source/: README.md  expected.plan.json  input.units.json
fixtures/cases/03-manifest-lockfile/: README.md  expected.plan.json  input.units.json
fixtures/cases/04-docs-and-tests-attach/: README.md  expected.plan.json  input.units.json
fixtures/cases/05-ambiguous-root-doc/: README.md  expected.plan.json  input.units.json
schema/: stackcut.override.schema.json  stackcut.plan.schema.json
xtask/: Cargo.toml
xtask/src/: main.rs
