[workspace]
members = [
  "crates/stackcut-core",
  "crates/stackcut-git",
  "crates/stackcut-artifact",
  "crates/stackcut-cli",
  "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
toml = "0.8"
chrono = "0.4"
proptest = "1"
sha2 = "0.10"
