[package]
name = "stackcut-artifact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
stackcut-core = { path = "../stackcut-core" }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
toml.workspace = true
