[package]
name = "stackcut-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
stackcut-artifact = { path = "../stackcut-artifact" }
stackcut-core = { path = "../stackcut-core" }
stackcut-git = { path = "../stackcut-git" }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
serde_json.workspace = true
