[package]
name = "stackcut-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
sha2.workspace = true
tempfile.workspace = true
stackcut-core = { path = "../stackcut-core" }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
stackcut-core = { path = "../stackcut-core" }
